[package]
name = "pico_temperature"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2", features = ["unproven"] }
embedded-time = "0.12"

rp2040-hal = "0.2"
rp2040-boot2 = "0.1"
